# curso-fastapi-avancado-2023-2-projetos-tdd-postgresql-udemy

conversor-de-moedas/: converter.py  main.py  pyproject.toml  routers.py  schemas.py
introducao/: async_await_overview.py  async_await_sponge_bob.py  pydantic_overview.py  pyproject.toml
produtos/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
produtos/app/: main.py
produtos/app/db/: connection.py  models.py
produtos/app/migrations/versions/: 38997edede11_add_products_table.py  4263c62ce3fd_add_users_table.py  4501334c807c_add_categories_table.py
produtos/app/routes/: category_routes.py  deps.py  poc.py  product_routes.py  user_routes.py
produtos/app/schemas/: base.py  category.py  product.py  user.py
produtos/app/test/: conftest.py
produtos/app/test/routes/: test_category_routes.py  test_product_routes.py  test_user_routes.py
produtos/app/test/schemas/: test_category_schema.py  test_product_schema.py  test_user_schema.py
produtos/app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py  test_user_use_cases.py
produtos/app/use_cases/: category.py  product.py  user.py
