[project]
name = "introducao"
version = "0.1.0"
description = ""
authors = [
    {name = "grbalmeida",email = "g.r.almeida@live.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
