[tool.poetry]
name = "produtos"
version = "0.1.0"
description = ""
authors = ["grbalmeida <g.r.almeida@live.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
sqlalchemy = ">=2.0.40,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
alembic = ">=1.15.2,<2.0.0"
python-decouple = ">=3.8,<4.0"
httpx = ">=0.28.1,<0.29.0"
passlib = ">=1.7.4,<2.0.0"
python-jose = ">=3.4.0,<4.0.0"
python-multipart = ">=0.0.20,<0.0.21"
pytest = ">=8.3.5,<9.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"